[package]
name = "xenclient"
version.workspace = true
edition = "2021"
resolver = "2"

[dependencies]
libc = { workspace = true }
elf = { workspace = true }
flate2 = { workspace = true }
xz2 = { workspace = true }
memchr = { workspace = true }
slice-copy = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

[dependencies.xencall]
path = "../xencall"

[dependencies.xenstore]
path = "../xenstore"

[dependencies.xenevtchn]
path = "../xenevtchn"

[dev-dependencies]
env_logger = { workspace = true }

[lib]
path = "src/lib.rs"

[[example]]
name = "xenclient-boot"
path = "examples/boot.rs"
